packages/components/bolt-nav-priority/nav-priority.scss
/* ------------------------------------ *\
   Nav
\* ------------------------------------ */

@import '@bolt/core-v3.x';

$bolt-navbar-vspacing-small: var(--bolt-spacing-y-small);
$bolt-navbar-xsmall-bp: 420px; // Slightly increase the default 400px xsmall breakpoint to be better optimized for larger plus-sized mobile devices -- value shared by the bolt-navbar, bolt-nav-priority, and bolt-navlink components

bolt-nav-priority {
  display: block;
  flex-shrink: 4; // shrink faster than other components in tight spots
  align-self: center;
  position: relative;
  padding-bottom: var(--bolt-spacing-y-medium);

  @include bolt-if-browser-supports-display-contents {
    @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
      &.is-ready {
        display: contents;
      }

      @supports (--css: variables) {
        padding-top: var(--bolt-spacing-y-medium, $bolt-navbar-vspacing-small);
      }
    }
  }

  &:not(.is-ready) {
    overflow-x: auto;
  }

  &.is-resizing {
    overflow: hidden;
  }
}

.c-bolt-nav-priority {
  @include bolt-if-browser-supports-display-contents {
    @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
      &.is-ready {
        display: contents;
      }
    }
  }

  &:not(.is-ready) {
    -webkit-overflow-scrolling: touch;
    background-attachment: local, local, scroll, scroll;
    background-position: 0 0, 100% 0, 0 0, 100% 0;
    background-repeat: no-repeat;
    background-size: 4em 100%, 4em 100%, 1em 100%, 1em 100%;
    overflow-x: auto;
  }

  .is-hidden {
    display: none;
  }
}

.c-bolt-nav-priority__show-button {
  display: block;
  width: 100%;
  color: bolt-theme(headline);
  background-color: transparent;
}

.c-bolt-nav-priority__primary {
  @include bolt-if-browser-supports-display-contents {
    @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
      .is-ready & {
        display: contents;
      }
    }
  }

  display: flex;
  margin: 0;
  list-style: none;
}

.c-bolt-nav-priority__item {
  display: flex;
  flex-shrink: 0;
  white-space: nowrap;
}

// required so the dropdown can be positioned consistently
.c-bolt-nav-priority__show-more {
  position: relative;
}

@include bolt-if-browser-supports-display-contents {
  .c-bolt-nav-priority__show-more {
    @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
      display: contents;
    }
  }
}

.c-bolt-nav-priority__dropdown-list {

  opacity: bolt-opacity(0);
  transform: translate3d(0, calc( var(--bolt-spacing-y-medium) * -1 ), 0);
  width: 100%;
  overflow: hidden;
  margin: 0;
  list-style: none;
  pointer-events: none;
  transition: transform 0.3s cubic-bezier(0.23, 1, 0.32, 1) 0s, opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0.1s;
  padding: var(--bolt-spacing-y-xsmall) var(--bolt-spacing-x-xsmall);

  .c-bolt-nav-priority--show-dropdown & {
    opacity: bolt-opacity(100);
    transform: translate3d(0, 0, 0);
    pointer-events: auto;
    transition-delay: 0.2s, 0.1s;
  }
}

.c-bolt-nav-priority__dropdown {
  @include bolt-z-index(tooltip);
  visibility: hidden;
  position: absolute;
  top: 100%;
  right: 0;
  width: calc(100vw - #{var(--bolt-spacing-x-large)});
  min-width: 12rem;
  max-width: 100vw;
  max-height: 0;
  border-bottom-right-radius: $bolt-border-radius;
  border-bottom-left-radius: $bolt-border-radius;
  box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
  background-color: bolt-theme(
    (
      xdark: brand-darken-5,
      dark: brand-lighten-20,
      light: secondary,
      xlight: secondary,
    )
  );
  transition: max-height 0.3s cubic-bezier(0.28, 0.11, 0.32, 1) 0s, visibility 0s linear 0.3s;

  * {
    white-space: normal;
  }

  @include bolt-mq($bolt-navbar-xsmall-bp) {
    width: auto;
    max-width: 100%;
  }

  @include bolt-if-browser-supports-display-contents {
    @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
      left: 0;
      width: auto;
      grid-row: 2 / span 1;
      grid-column: 1 / span 6;
    }
  }

  .c-bolt-nav-priority--show-dropdown & {
    visibility: visible;
    visibility: visible;
    max-height: 400px;
    max-height: calc(100vh - 48px - 48px);
    pointer-events: auto;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
    transition-delay: 0.1s, 0s;
  }

  .is-closing &,
  .is-opening & {
    overflow: hidden;
  }
}

// keyframes
@keyframes nav-dropdown {
  0% {
    opacity: bolt-opacity(0);
    transform: translateY(-1em);
  }
  100% {
    opacity: bolt-opacity(100);
    transform: translateY(0);
  }
}

.c-bolt-nav-priority__show-button {
  padding: var(--bolt-spacing-y-xxsmall) var(--bolt-spacing-x-xsmall);

  @include bolt-mq($bolt-navbar-xsmall-bp){
    padding: var(--bolt-spacing-y-xsmall) var(--bolt-spacing-x-small);
  }

  position: relative;
  cursor: pointer;
  border-radius: 3px;
  border-radius: $bolt-border-radius;
  // Added border so that &:after,&:focus doesn't change the size of the band
  // We should consider making this thin dotted style a mixin to share with nav-priority
  border-width: thin;
  border-style: solid;
  border-color: transparent;
  background-color: bolt-theme(secondary, 0.05);
  transition: background-color 0.3s ease;
  white-space: nowrap;

  @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
    height: 100%; // fix for height: 100% causing issues on larger screen sizes
    border-left-color: bolt-theme(headline, 0.2);
    border-left-width: 1px;
    border-radius: 0;
  }

  &:before {
    content: '';
    opacity: bolt-opacity(0);
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    width: 100%;
    height: 100%;

    overflow: hidden;
    pointer-events: none;
    pointer-events: none;
    background-color: bolt-theme(
      (
        xdark: brand 0.95,
        dark: brand 0.95,
        light: neutral 0.95,
        xlight: neutral 0.95,
      )
    );
    transition: opacity 0.3s ease;
  }

  &:hover {
    background-color: bolt-theme(secondary, 0.15);

    &:before {
      opacity: 0.1;
    }
  }

  &:focus,
  &.is-active {
    border-style: dotted;
    border-color: bolt-theme(primary);
    outline: none;
  }

  &.is-active,
  &:active {
    background-color: bolt-theme(secondary, 0.1);

    &:before {
      opacity: 0.1;
    }
  }

  @include bolt-if-browser-supports-display-contents {
    @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
      .is-ready & {
        grid-row: 1 / span 1;
        grid-column: 5 / span 1;
      }
    }
  }
}

.c-bolt-nav-priority__show-text {
  @include bolt-font-size(small);
  @include bolt-font-weight(semibold);
  position: relative;
  z-index: 10;

  @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
    @include bolt-visuallyhidden;
  }
}

.c-bolt-nav-priority__show-icon {
  display: inline-block;
  position: relative;
  z-index: 10;
  line-height: 0;
  font-size: 1em;
  transition: transform 0.2s;

  @include bolt-mq($until: $bolt-navbar-xsmall-bp) {
    font-size: 24px;
  }

  .c-bolt-nav-priority--show-dropdown & {
    transform: rotate(180deg);
  }
}

// bolt-nav-priority {
//   @include bolt-css-vars((
//     --bolt-nav-priority-item-opacity: 0,
//     --bolt-nav-priority-item-transform: translateY(bolt-spacing(large) * -1),
//   ));

//   &[open*=true]{
//       @include bolt-css-vars((
//         --bolt-nav-priority-item-opacity: 1,
//         --bolt-nav-priority-item-transform: none,
//       ));
//   }
// }

.c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item {
  opacity: bolt-opacity(0);
  transform: translate3d(0, calc( var(--bolt-spacing-y-large) * -1 ), 0);
  transition: opacity 0.3s cubic-bezier(0.28, 0.11, 0.32, 1), transform 0.3s cubic-bezier(0.28, 0.11, 0.32, 1); // transition:
  transition-property: transform, opacity;
}

@for $quantity from 1 through 12 {
  $time: 0;

  @for $i from $quantity through 1 {
    $time: $time + 50;
    bolt-nav-priority:not(.is-closing) .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item:nth-last-child(n+#{$quantity}),
    bolt-nav-priority:not(.is-closing) .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item:nth-last-child(n+#{$quantity}) ~ .c-bolt-nav-priority__item:nth-child(#{$i}) {
      transition-delay: $time + ms;
    }

    .is-closing .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item:nth-child(#{$i}) {
      transition-delay: $i * 17 + ms;
    }
  }

  $time: $time + 50;
}

.c-bolt-nav-priority--show-dropdown .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item {
  opacity: bolt-opacity(100);
  transform: translate3d(0, 0, 0);
}

